--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   url_launcher: ^6.3.1
   new_version_plus: ^0.1.0
+  workmanager: ^0.9.0+2
 
   http_parser: any
 dev_dependencies:
