--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,7 +21,16 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
+    avoid_print: false
+    file_names: false
+    non_constant_identifier_names: false
+    camel_case_types: false
+    constant_identifier_names: false
+    library_private_types_in_public_api: false
+    prefer_const_constructors_in_immutables: false
+    prefer_typing_uninitialized_variables: false
+    use_build_context_synchronously: false
+    unrelated_type_equality_checks: false
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
 # Additional information about this file can be found at
