--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,27 +35,27 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: any
-  pinput: ^5.0.0
+  pinput: ^6.0.1
   intl: ^0.20.1
-  syncfusion_flutter_gauges: ^28.1.38
+  syncfusion_flutter_gauges: ^32.1.23
   http: ^1.2.2
   fancy_shimmer_image: ^2.0.3
-  geocoding: ^3.0.0
+  geocoding: ^4.0.0
   shared_preferences: ^2.3.2
-  fluttertoast: ^8.2.8
-  geolocator: ^13.0.2
+  fluttertoast: ^9.0.0
+  geolocator: ^14.0.2
   google_maps_flutter: ^2.10.0
-  firebase_core: ^3.9.0
-  firebase_auth: ^5.3.4
-  firebase_messaging: ^15.1.6
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3
+  firebase_messaging: ^16.1.0
   flutter_google_places_hoc081098: ^2.0.0
   get: any
   image_picker: ^1.1.2
   flutter_local_notifications: ^19.4.0
   change_app_package_name: ^1.1.0
-  excel: ^2.0.6
+  excel: ^4.0.6
   path_provider: ^2.1.5
-  share_plus: ^10.1.4
+  share_plus: ^12.0.1
   flutter_easyloading: ^3.0.5
   url_launcher: ^6.3.1
   new_version_plus: ^0.1.0
@@ -65,8 +65,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.13.1"
-  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
+  flutter_lints: ^6.0.0
+
+dependency_overrides:
+  geocoding_android:
+    path: third_party/geocoding_android
 
 flutter_icons:
   android: "launcher_icon"
