--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,10 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  exclude:
+    - third_party/**
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
@@ -29,7 +33,9 @@ linter:
     library_private_types_in_public_api: false
     prefer_const_constructors_in_immutables: false
     prefer_typing_uninitialized_variables: false
+    strict_top_level_inference: false
     use_build_context_synchronously: false
+    use_super_parameters: false
     unrelated_type_equality_checks: false
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
