--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: meeting
+name: wealthyfy
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,7 +37,7 @@ dependencies:
   google_fonts: any
   pinput: ^6.0.1
   intl: ^0.20.1
-  syncfusion_flutter_gauges: ^32.1.23
+  syncfusion_flutter_gauges: ^31.1.19
   http: ^1.2.2
   fancy_shimmer_image: ^2.0.3
   geocoding: ^4.0.0
@@ -76,6 +76,7 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/logo.png"
+  remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
